正好趁 API 寄了，修点报错信息